k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.jwtauth.nani.id.vn
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: envoy-gateway
                port:
                  number: 80
