k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: "*"
      http:
        paths:

          # Auth-service APIs
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081

          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081

          - path: /api/v1/accounts
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081

          # Auth-service JWKS & well-known
          - path: /well-known
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081

          # Order-service APIs
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8082
